# waldo_vision

./: .gitignore  .mcp.json  Cargo.toml  RELEASE_NOTES.md
scripts/: run_visualizer.sh
src/: main.rs
src/core_modules/: blob_detector.rs  chunk.rs  grid_manager.rs  mod.rs  moment.rs  pixel.rs  smart_blob.rs  smart_chunk.rs  smart_pixel.rs  tracker.rs
src/core_modules/utils/: image_helper.rs  mod.rs
visual_tester/: Cargo.toml
visual_tester/src/: main.rs
waldo_vision/: .gitignore  Cargo.toml  INTEGRATION_GUIDE.md  KNOWN_BUGS.md  README.md  RELEASE_NOTES.md
waldo_vision/src/: lib.rs  main.rs  parallel_pipeline.rs  pipeline.rs
waldo_vision/src/core_modules/: blob_detector.rs  chunk.rs  grid_manager.rs  mod.rs  moment.rs  pixel.rs  smart_blob.rs  smart_chunk.rs  smart_pixel.rs  tracker.rs
waldo_vision/src/core_modules/1D/: pixel.rs
waldo_vision/src/core_modules/D1/: pixel.rs
waldo_vision_visualizer/: Cargo.toml
waldo_vision_visualizer/src/: lib.rs
