[package]
name = "waldo_vision"
version = "0.2.0"
edition = "2024"
description = "A multi-layered computer vision engine for detecting significant events in real-time video streams."
license = "MIT"
repository = "https://github.com/TheGonzalezDesigns/waldo_vision"
readme = "README.md"
keywords = ["computer-vision", "motion-detection", "event-detection", "filter", "analysis"]
categories = ["computer-vision", "multimedia::video"]

[dependencies]
image = "0.25.6"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
num_cpus = "1.16"
